WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35450
Crash when a Java array property accessor raises an exception
https://bugs.webkit.org/show_bug.cgi?id=35450
Summary
Crash when a Java array property accessor raises an exception
Alexey Proskuryakov
Reported
2010-02-26 14:04:38 PST
Null dereference. Patch forthcoming.
Attachments
proposed fix
(6.68 KB, patch)
2010-02-26 14:07 PST
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
proposed fix
(6.68 KB, patch)
2010-02-26 14:24 PST
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
proposed fix
(4.72 KB, patch)
2010-02-26 14:27 PST
,
Alexey Proskuryakov
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2010-02-26 14:07:33 PST
Created
attachment 49636
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2010-02-26 14:24:39 PST
Created
attachment 49644
[details]
proposed fix Different Java versions may have different stack traces, don't want the results to change because of that.
Alexey Proskuryakov
Comment 3
2010-02-26 14:27:10 PST
Created
attachment 49645
[details]
proposed fix Actually uploading a new patch.
Anders Carlsson
Comment 4
2010-02-26 14:27:45 PST
Comment on
attachment 49645
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 5
2010-02-26 14:30:56 PST
http://trac.webkit.org/changeset/55315
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug