        Reviewed by Anders Carlsson.

https://bugs.webkit.org/show_bug.cgi?id=35450
        Crash when a Java array property accessor raises an exception

        Test: java/inaccessible-class.html. Adding with a FAIL result, because this doesn't raise
        an exception in Firefox. I don't know what the formally correct behavior is, but it's good
        to avoid crashing.

        * bridge/jni/jsc/JNIBridgeJSC.cpp: (JavaField::valueFromInstance): Check if the result
        is null before interpreting it as an object or array.



Canonical link: https://commits.webkit.org/46616@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55315 268f45cc-cd09-0410-ab3c-d52691b4dbfc